# nexora

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  main.rs  model.rs  optimize.rs  server.rs  tests.rs
